--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -9,7 +9,7 @@ block content
       select#book.form-control(type='select' placeholder='Select book' name='book' required='true')
         - book_list.sort(function(a, b) {let textA = a.title.toUpperCase(); let textB = b.title.toUpperCase(); return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;});
         for book in book_list
-          option(value=book._id, selected=(bookinstance.book._id.toString()==book._id.toString() ? 'selected' : false) ) #{book.title}
+          option(value=book._id, selected=(bookinstance ? bookinstance.book._id.toString()==book._id.toString() ? 'selected' : false : false) ) #{book.title}
 
     div.form-group
       label(for='imprint') Imprint:
